fix issue with view on mobiles

--- a/style.css
+++ b/style.css
@@ -487,9 +487,12 @@ footer {
 
 @media only screen and (max-width: 998px) {
 
+    html {
+        overflow-x: hidden;
+    }
+
     nav {
         justify-content: space-between;
-        padding: 20px 50px;
     }
 
     .menu, .nav-buttons {
@@ -497,13 +500,14 @@ footer {
     }
 
     .logo {
-        margin: 0;
+        margin: 0 50px;
         padding: 0;
     }
 
     .fa-bars {
         display: block;
-        font-size: 1.8rem   ;
+        font-size: 1.8rem;
+        margin-right: 50px;
     }
 
    .container {
